--- a/.dvcignore
+++ b/.dvcignore
@@ -1,3 +1,6 @@
 # Add patterns of files dvc should ignore, which could improve
 # the performance. Learn more at
 # https://dvc.org/doc/user-guide/dvcignore
+
+# ignore unprotected PDF files
+raw-dataset/10-5-2022-h
