--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ temp.py
 # decrypted sample pdf files
 sample/dec_sample
 
+# ignore entire unprotected PDF files (also manually ignored by DVC)
+raw-dataset/10-5-2022-h
