workspace dogshit dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,19 @@
 {
     "cSpell.words": [
+        "Accomp",
+        "Cdate",
+        "cntct",
+        "cntcts",
+        "Countryof",
+        "Curr",
         "dateutil",
         "fillna",
+        "Marr",
+        "Nums",
         "PDFIO",
+        "Prevly",
+        "Prps",
+        "Psprt",
         "pypdf",
         "Subform",
         "XFAPDF"
