add conversion of country name to numeric #10

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
         "Prps",
         "Psprt",
         "pypdf",
+        "skipna",
         "Subform",
+        "subindicator",
         "XFAPDF"
     ],
     "python.linting.mypyEnabled": true,
