--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,21 @@
         "Accomp",
         "argstr",
         "Cdate",
+        "checkpointer",
         "cntct",
         "cntcts",
+        "corrcoef",
         "Countryof",
         "Curr",
         "dateutil",
+        "fbeta",
         "fillna",
+        "Frobenius",
         "Marr",
         "Nums",
         "PDFIO",
         "pdfobject",
+        "prec",
         "Prevly",
         "Prps",
         "Psprt",
@@ -23,6 +28,7 @@
         "subindicator",
         "subkey",
         "subvalue",
+        "Tikhonov",
         "XFAPDF"
     ],
     "python.linting.mypyEnabled": true,
