clean notebook [incomplete]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "subkey",
         "subvalue",
         "Tikhonov",
+        "violinplot",
         "XFAPDF"
     ],
     "python.linting.mypyEnabled": true,
