--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "fillna",
         "Frobenius",
         "Marr",
+        "nbonlycode",
         "Nums",
         "PDFIO",
         "pdfobject",
@@ -21,6 +22,7 @@
         "Prevly",
         "Prps",
         "Psprt",
+        "pyonlycode",
         "pypdf",
         "relativedelta",
         "skipna",
