--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Countryof",
         "Curr",
         "dateutil",
+        "DOBX",
         "fbeta",
         "fillna",
         "Frobenius",
