--- a/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
+++ b/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
@@ -1,5 +1,5 @@
 {
-    "all_continuous": {
+    "all_continuous_StandardScaler": {
         "columns_type": "'numeric'",
         "dtype_include": "np.float32",
         "pattern_include": "None",
@@ -7,7 +7,7 @@
         "dtype_exclude": "None"
     },
 
-    "ChdMStatus_categorical": {
+    "ChdMStatus_categorical_OneHotEncoder": {
         "columns_type": "'numeric'",
         "dtype_include": "'category'",
         "pattern_include": "'.*ChdMStatus'",
@@ -15,7 +15,7 @@
         "dtype_exclude": "None"
     },
 
-    "binary_categorical": {
+    "binary_categorical_OneHotEncoder": {
         "columns_type": "'numeric'",
         "dtype_include": "'category'",
         "pattern_include": "'.*(Indicator|Sex|Stay|Deport|PrevApply).*'",
@@ -23,7 +23,7 @@
         "dtype_exclude": "None"
     },
 
-    "other_categorical": {
+    "other_categorical_OneHotEncoder": {
         "columns_type": "'numeric'",
         "dtype_include": "'category'",
         "pattern_include": "'.*(Status|Country|Prps|Relationship|Study).*'",
