add transformation of `y` variable (`VisaResult`) [our API doesnt work - See #54]

--- a/vizard/models/preprocessors/data/canada_column_transformer_config_y.json
+++ b/vizard/models/preprocessors/data/canada_column_transformer_config_y.json
@@ -1,7 +1,7 @@
 {
-    "target_binary": {
+    "result_LabelBinarizer": {
         "columns_type": "'numeric'",
-        "dtype_include": "'category'",
+        "dtype_include": "None",
         "pattern_include": "'VisaResult'",
         "pattern_exclude": "None",
         "dtype_exclude": "None"
