fix excludingg issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
     "cSpell.words": [
         "Accomp",
         "argstr",
+        "autosectionlabel",
+        "bysource",
         "Cdate",
         "checkpointer",
         "cntct",
         "cntcts",
+        "copybutton",
         "corrcoef",
         "Countryof",
         "Curr",
@@ -14,6 +17,8 @@
         "fbeta",
         "fillna",
         "Frobenius",
+        "githubpages",
+        "ivar",
         "Marr",
         "nbonlycode",
         "Nums",
@@ -32,6 +37,8 @@
         "subkey",
         "subvalue",
         "Tikhonov",
+        "typehints",
+        "viewcode",
         "violinplot",
         "XFAPDF"
     ],
