do augmentation only on train set - fix #66

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "fillna",
         "Frobenius",
         "githubpages",
+        "importances",
         "ivar",
         "limitdepth",
         "Marr",
