--- a/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
+++ b/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
@@ -5,7 +5,8 @@
         "pattern_include": "None",
         "pattern_exclude": "None",
         "dtype_exclude": "None",
-        "group": "False"
+        "group": "False",
+        "use_global": "False"
     },
 
     "ChdMStatus_categorical_OneHotEncoder": {
@@ -14,7 +15,8 @@
         "pattern_include": "'.*ChdMStatus'",
         "pattern_exclude": "None",
         "dtype_exclude": "None",
-        "group": "True"
+        "group": "True",
+        "use_global": "True"
     },
 
     "binary_categorical_OneHotEncoder": {
@@ -23,15 +25,67 @@
         "pattern_include": "'.*(Indicator|Sex|Stay|Deport|PrevApply).*'",
         "pattern_exclude": "None",
         "dtype_exclude": "None",
-        "group": "False"
+        "group": "False",
+        "use_global": "True"
     },
 
-    "other_categorical_OneHotEncoder": {
+    "CORStatus_categorical_OneHotEncoder": {
         "columns_type": "'numeric'",
         "dtype_include": "'category'",
-        "pattern_include": "'.*(Status|Country|Prps|Relationship|Study).*'",
+        "pattern_include": "'.*(COR).*(Status).*'",
         "pattern_exclude": "'.*(Chd).*'",
         "dtype_exclude": "None",
-        "group": "False"
+        "group": "False",
+        "use_global": "True"
+    },
+
+    "CWAStatus_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(CWA).*(Status).*'",
+        "pattern_exclude": "'.*(Chd).*'",
+        "dtype_exclude": "None",
+        "group": "False",
+        "use_global": "True"
+    },
+
+    "Country_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(Country).*'",
+        "pattern_exclude": "'.*(Chd).*'",
+        "dtype_exclude": "None",
+        "group": "False",
+        "use_global": "True"
+    },
+
+    "Prps_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(Prps).*'",
+        "pattern_exclude": "'.*(Chd).*'",
+        "dtype_exclude": "None",
+        "group": "False",
+        "use_global": "True"
+    },
+
+    "Relationship_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(Relationship).*'",
+        "pattern_exclude": "'.*(Chd).*'",
+        "dtype_exclude": "None",
+        "group": "False",
+        "use_global": "True"
+    },
+
+    "Study_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(Study).*'",
+        "pattern_exclude": "'.*(Chd).*'",
+        "dtype_exclude": "None",
+        "group": "False",
+        "use_global": "True"
     }
 }
