--- a/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
+++ b/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
@@ -87,5 +87,35 @@
         "dtype_exclude": "None",
         "group": "False",
         "use_global": "True"
+    },
+
+    "SecBChdRel_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(SecB).*(ChdRel).*'",
+        "pattern_exclude": "None",
+        "dtype_exclude": "None",
+        "group": "True",
+        "use_global": "True"
+    },
+
+    "SecCChdRel_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(SecC).*(ChdRel).*'",
+        "pattern_exclude": "None",
+        "dtype_exclude": "None",
+        "group": "True",
+        "use_global": "True"
+    },
+
+    "Occ_categorical_OneHotEncoder": {
+        "columns_type": "'numeric'",
+        "dtype_include": "'category'",
+        "pattern_include": "'.*(Occ\\.Occ).*'",
+        "pattern_exclude": "None",
+        "dtype_exclude": "None",
+        "group": "True",
+        "use_global": "True"
     }
 }
