add dtreeviz interface usage in main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,10 +16,12 @@
         "DOBX",
         "fbeta",
         "fillna",
+        "FLAMLD",
         "Frobenius",
         "githubpages",
         "importances",
         "ivar",
+        "lightgbm",
         "limitdepth",
         "Marr",
         "nbonlycode",
