enable debugger to debug 3rd party libs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "env": {"PYDEVD_WARN_SLOW_RESOLVE_TIMEOUT": "2"},
-            "justMyCode": true
+            "justMyCode": false
         }
     ]
 }
