--- a/conda_env.yml
+++ b/conda_env.yml
@@ -34,11 +34,11 @@ dependencies:
   - brotlipy=0.7.0=py38h0a891b7_1004
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.6.15=ha878542_0
+  - ca-certificates=2022.6.15.1=ha878542_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=5.0.0=pyhd8ed1ab_0
-  - certifi=2022.6.15=pyhd8ed1ab_1
+  - certifi=2022.6.15.1=pyhd8ed1ab_0
   - cffi=1.14.4=py38ha312104_0
   - charset-normalizer=2.1.0=pyhd8ed1ab_0
   - colorama=0.4.5=pyhd8ed1ab_0
@@ -93,6 +93,7 @@ dependencies:
   - iniconfig=1.1.1=pyh9f0ad1d_0
   - ipykernel=6.15.0=pyh210e3f2_0
   - ipython=8.4.0=py38h578d9bd_0
+  - ipywidgets=8.0.2=pyhd8ed1ab_1
   - jedi=0.18.1=py38h578d9bd_1
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.1.0=pyhd8ed1ab_0
@@ -103,6 +104,7 @@ dependencies:
   - jupyter_core=4.10.0=py38h578d9bd_0
   - jupyter_server=1.18.1=pyhd8ed1ab_0
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.3=pyhd8ed1ab_0
   - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.4=py38h43d8883_0
@@ -129,6 +131,7 @@ dependencies:
   - libgomp=12.1.0=h8d9b700_16
   - libiconv=1.16=h516909a_0
   - liblapack=3.9.0=15_linux64_openblas
+  - libllvm11=11.1.0=hf817b99_3
   - libmamba=0.25.0=hd8a31e3_1
   - libmambapy=0.25.0=py38h923e62a_1
   - libnghttp2=1.47.0=h727a467_0
@@ -149,6 +152,7 @@ dependencies:
   - libxml2=2.9.14=h22db469_3
   - libzlib=1.2.12=h166bdaf_1
   - lightgbm=3.3.2=py38h709712a_0
+  - llvmlite=0.38.1=py38h38d86a4_0
   - lz4-c=1.9.3=h9c3ff4c_1
   - lzo=2.10=h516909a_1000
   - mailchecker=4.1.19=pyhd8ed1ab_0
@@ -171,7 +175,8 @@ dependencies:
   - ncurses=6.3=h27087fc_1
   - nest-asyncio=1.5.5=pyhd8ed1ab_0
   - networkx=2.8.5=pyhd8ed1ab_0
-  - numpy=1.23.1=py38h3a7f9d9_0
+  - numba=0.55.2=py38hdc3674a_0
+  - numpy=1.22.4=py38h99721a1_0
   - oauthlib=3.2.0=pyhd8ed1ab_0
   - openjpeg=2.4.0=hb52868f_1
   - openssl=1.1.1q=h166bdaf_0
@@ -247,9 +252,11 @@ dependencies:
   - seaborn-base=0.11.2=pyhd8ed1ab_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=62.5.0=py38h578d9bd_0
+  - shap=0.41.0=py38h47df419_0
   - shortuuid=1.0.9=pyha770c72_1
   - shtab=1.5.5=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
+  - slicer=0.0.7=pyhd8ed1ab_0
   - smmap=3.0.5=pyh44b312d_0
   - sniffio=1.2.0=py38h578d9bd_3
   - soupsieve=2.3.2.post1=pyhd8ed1ab_0
@@ -282,6 +289,7 @@ dependencies:
   - webencodings=0.5.1=py_1
   - werkzeug=2.2.1=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.3=pyhd8ed1ab_0
   - xgboost=1.3.3=py38h578d9bd_2
   - xmltodict=0.13.0=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h7f98852_0
