add mlflow falvor specific model tracking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "lightgbm",
         "limitdepth",
         "Marr",
+        "MLMODELS",
         "nbonlycode",
         "Nums",
         "PDFIO",
