--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "console": "integratedTerminal",
             "args": [
                 "--experiment_name", "fastapi",
-                "--run_id", "a820234814354b81973c5a4c667e1472",
+                "--run_id", "",
                 "--bind", "0.0.0.0",
                 "--gunicorn_port", "8000",
                 "--mlflow_port", "5000",
