ignore more stuff

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,7 +2,6 @@
 .pytest_cache
 build
 dist
-docs
 gradio
 mlflow-runs
 mlruns
@@ -12,3 +11,94 @@ gradio_queue.db
 gradio_queue.db-journal
 mlflow.db
 Dockerfile
+
+
+# ---> Python
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# sample files
+sample
+
+# ignore logs, they are going to be recorded as artifacts using DVC
+logs
+
+# ignore raw-dataset/*files
+raw-dataset/all
+raw-dataset/field_data
+
+# ignore redundant logs
+mlruns
+notebooks/mlruns
+mlflow-runs
+artifacts
+mlflow.db
+
+# gradio
+gradio_queue.db
+gradio/flags
+gradio/models
+*.db-journal
+
+# . dir
+.vscode
+.pytest_cache
+.mypy_cache
+.dvc/cache
+.dvc/tmp
