add shap value aggregation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "subindicator",
         "subkey",
         "subvalue",
+        "superlist",
         "thres",
         "Tikhonov",
         "typehints",
