--- a/conda_env.yml
+++ b/conda_env.yml
@@ -320,10 +320,14 @@ dependencies:
   - pip:
       - absl-py==2.0.0
       - cachetools==5.3.1
+      - deprecation==2.1.0
       - google-auth==2.23.3
       - google-auth-oauthlib==1.0.0
       - grpcio==1.59.0
+      - lxml==4.9.3
+      - pikepdf==8.5.1
       - pyasn1-modules==0.3.0
+      - pypdf2==3.0.1
       - requests-oauthlib==1.3.1
       - rsa==4.9
       - snorkel==0.9.10+dev
