--- a/conda_env.yml
+++ b/conda_env.yml
@@ -10,6 +10,8 @@ dependencies:
   - aiohttp-retry=2.8.3=pyhd8ed1ab_0
   - aiosignal=1.3.1=pyhd8ed1ab_0
   - alembic=1.12.0=pyhd8ed1ab_0
+  - annotated-types=0.6.0=pyhd8ed1ab_0
+  - anyio=3.7.1=pyhd8ed1ab_0
   - appdirs=1.4.4=pyh9f0ad1d_0
   - async-timeout=4.0.3=pyhd8ed1ab_0
   - asyncssh=2.14.0=pyhd8ed1ab_0
@@ -71,7 +73,9 @@ dependencies:
   - enlighten=1.12.0=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - et_xmlfile=1.1.0=pyhd8ed1ab_0
+  - exceptiongroup=1.1.3=pyhd8ed1ab_0
   - expat=2.5.0=hcb278e6_1
+  - fastapi=0.104.0=pyhd8ed1ab_0
   - filelock=3.12.4=pyhd8ed1ab_0
   - flaml=2.1.1=pyhd8ed1ab_0
   - flask=2.3.3=pyhd8ed1ab_0
@@ -109,6 +113,7 @@ dependencies:
   - gtk2=2.24.33=h90689f9_2
   - gts=0.7.6=h977cf35_4
   - gunicorn=21.2.0=py310hff52083_1
+  - h11=0.14.0=pyhd8ed1ab_0
   - harfbuzz=8.2.1=h3d44ed6_0
   - icu=73.2=h59595ed_0
   - idna=3.4=pyhd8ed1ab_0
@@ -229,6 +234,8 @@ dependencies:
   - pyarrow=13.0.0=py310hf9e7431_10_cpu
   - pyasn1=0.5.0=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pydantic=2.4.2=pyhd8ed1ab_0
+  - pydantic-core=2.10.1=py310hcb5633a_0
   - pydot=1.4.2=py310hff52083_4
   - pygit2=1.13.1=py310h2372a71_0
   - pygments=2.16.1=pyhd8ed1ab_0
@@ -273,8 +280,10 @@ dependencies:
   - slicer=0.0.7=pyhd8ed1ab_0
   - smmap=3.0.5=pyh44b312d_0
   - snappy=1.1.10=h9fff704_0
+  - sniffio=1.3.0=pyhd8ed1ab_0
   - sqlalchemy=2.0.22=py310h2372a71_0
   - sqlparse=0.4.4=pyhd8ed1ab_0
+  - starlette=0.27.0=pyhd8ed1ab_0
   - sympy=1.12=pypyh9d50eac_103
   - tabulate=0.9.0=pyhd8ed1ab_1
   - tbb=2021.10.0=h00ab1b0_1
@@ -291,6 +300,7 @@ dependencies:
   - unicodedata2=15.1.0=py310h2372a71_0
   - unidecode=1.3.7=pyhd8ed1ab_0
   - urllib3=2.0.6=pyhd8ed1ab_0
+  - uvicorn=0.23.2=py310hff52083_1
   - voluptuous=0.13.1=pyhd8ed1ab_0
   - wcwidth=0.2.8=pyhd8ed1ab_0
   - websocket-client=1.6.4=pyhd8ed1ab_0
