--- a/conda_env.yml
+++ b/conda_env.yml
@@ -334,13 +334,20 @@ dependencies:
       - google-auth==2.23.3
       - google-auth-oauthlib==1.0.0
       - grpcio==1.59.0
+      - iniconfig==2.0.0
       - lxml==4.9.3
+      - mlflow-export-import==1.2.0
       - pikepdf==8.5.1
+      - pluggy==1.3.0
       - pyasn1-modules==0.3.0
       - pypdf2==3.0.1
+      - pytest==7.4.2
+      - pytest-html==4.0.2
+      - pytest-metadata==3.0.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
       - snorkel==0.9.10+dev
       - tensorboard==2.14.1
       - tensorboard-data-server==0.7.1
+      - tomli==2.0.1
 prefix: /home/nik/micromamba/envs/vizard-dev
