add ability to not set the args for `AutoML` fit
Previously, you had to provide a value if it is defined in the configs. But, since the default value in `flaml` is designed in a way that not providing that parameter does something different rather than setting a default value (e.g., `max_iter=0` is not the same as not providing `max_iter` at all), hence, now, by providing emptry string `""` for the args in the config, you can unset.

This is used on `max_iter` here to use the heuristics of `AutoML` for hyperparameter tuning based on the value of `time_budget`.

--- a/vizard/models/trainers/data/flaml_automl_configs.json
+++ b/vizard/models/trainers/data/flaml_automl_configs.json
@@ -2,7 +2,7 @@
     "method_fit": {
         "FLAML_AUTOML_METRIC": "log_loss",
         "FLAML_AUTOML_TASK": "classification",
-        "FLAML_AUTOML_MAX_ITER": 1000,
+        "FLAML_AUTOML_MAX_ITER": "",
         "FLAML_AUTOML_TIME_BUDGET": 10000,
         "FLAML_SPLIT_RATIO": 0.1,
         "FLAML_AUTOML_MEM_THRES": 19327352832,
