add `front-beta` repo as a submodule
This is the MVP for the first iteration of front of the Vizard (Visaland AI) project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "snorkel"]
 	path = snorkel
 	url = https://github.com/Nikronic/snorkel.git
+[submodule "front-beta"]
+	path = front-beta
+	url = git@github.com:Vizlul/front-beta.git
