--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,9 +27,11 @@
         "MLMODELS",
         "nbonlycode",
         "Nums",
+        "PCAP",
         "PDFIO",
         "pdfobject",
         "prec",
+        "pretransformed",
         "Prevly",
         "Prps",
         "Psprt",
@@ -48,6 +50,7 @@
         "unedu",
         "viewcode",
         "violinplot",
+        "worldbank",
         "XFAPDF",
         "XGBD"
     ],
