--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,10 @@
         "XFAPDF",
         "XGBD"
     ],
-    "python.linting.mypyEnabled": true,
-    "python.linting.enabled": true,
-    "terminal.integrated.shellIntegration.enabled": true
+    "python.linting.mypyEnabled": false,
+    "python.linting.enabled": false,
+    "terminal.integrated.shellIntegration.enabled": true,
+    "python.analysis.extraPaths": [
+        "./snorkel"
+    ],
 }
