--- a/conda_env.yml
+++ b/conda_env.yml
@@ -347,7 +347,7 @@ dependencies:
       - pikepdf==8.5.1
       - pluggy==1.3.0
       - pyasn1-modules==0.3.0
-      - pypdf2==3.0.1
+      - pypdf==3.17.0
       - pytest==7.4.2
       - pytest-html==4.0.2
       - pytest-metadata==3.0.0
