--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,23 @@
 {
     "cSpell.words": [
         "Accomp",
+        "Adate",
         "addoption",
+        "alborz",
+        "argpartition",
         "argstr",
+        "ASGI",
+        "Asignature",
+        "astype",
+        "AUTOML",
         "autosectionlabel",
+        "Barcodes",
+        "Bdate",
+        "bfill",
+        "Bsignature",
         "bysource",
+        "Carddocs",
+        "catboost",
         "Cdate",
         "checkpointer",
         "cntct",
@@ -12,48 +25,88 @@
         "copybutton",
         "corrcoef",
         "Countryof",
+        "Csignature",
         "Curr",
+        "databank",
+        "dataframes",
         "dateutil",
+        "Devs",
         "DOBX",
+        "dtreeviz",
+        "dtype",
+        "dtypes",
+        "fars",
+        "fastapi",
         "fbeta",
+        "ffill",
         "fillna",
+        "flaml",
         "FLAMLD",
         "Frobenius",
+        "gilan",
         "githubpages",
+        "gunicorn",
+        "hyperparams",
+        "iloc",
         "importances",
+        "isin",
+        "isna",
+        "isscalar",
         "ivar",
+        "LGBM",
         "lightgbm",
         "limitdepth",
+        "loggingdecorator",
+        "Lttr",
+        "lxml",
         "Marr",
+        "mlflow",
         "MLMODELS",
         "nbonlycode",
         "Nums",
+        "nunique",
+        "OPTIM",
         "PCAP",
         "PDFIO",
         "pdfobject",
+        "pikepdf",
         "prec",
+        "preprocessors",
         "pretransformed",
         "Prevly",
+        "proba",
         "Prps",
         "Psprt",
+        "pydantic",
         "pyonlycode",
         "pypdf",
         "relativedelta",
+        "Resi",
+        "Resiial",
+        "SHAP",
         "skipna",
+        "sqlalchemy",
+        "Streetname",
         "Subform",
         "subindicator",
         "subkey",
         "subvalue",
         "superlist",
         "thres",
+        "thresholding",
         "Tikhonov",
+        "truncnorm",
         "typehints",
         "unedu",
+        "uvicorn",
         "viewcode",
         "violinplot",
+        "visaland",
         "worldbank",
         "XFAPDF",
-        "XGBD"
+        "XGBD",
+        "xgboost",
+        "xmltodict"
     ],
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": false,
