--- a/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
+++ b/vizard/models/preprocessors/data/canada_column_transformer_config_x.json
@@ -9,61 +9,11 @@
         "use_global": "False"
     },
 
-    "ChdMStatus_categorical_OneHotEncoder": {
-        "columns_type": "'numeric'",
-        "dtype_include": "'category'",
-        "pattern_include": "'.*ChdMStatus'",
-        "pattern_exclude": "None",
-        "dtype_exclude": "None",
-        "group": "True",
-        "use_global": "True"
-    },
-
     "binary_categorical_OneHotEncoder": {
         "columns_type": "'numeric'",
         "dtype_include": "'category'",
-        "pattern_include": "'.*(Indicator|Sex|Stay|Deport|PrevApply).*'",
+        "pattern_include": "'.*(Indicator|Sex|Deport).*'",
         "pattern_exclude": "None",
-        "dtype_exclude": "None",
-        "group": "False",
-        "use_global": "True"
-    },
-
-    "CWAStatus_categorical_OneHotEncoder": {
-        "columns_type": "'numeric'",
-        "dtype_include": "'category'",
-        "pattern_include": "'.*(CWA).*(Status).*'",
-        "pattern_exclude": "'.*(Chd).*'",
-        "dtype_exclude": "None",
-        "group": "False",
-        "use_global": "True"
-    },
-
-    "Country_categorical_OneHotEncoder": {
-        "columns_type": "'numeric'",
-        "dtype_include": "'category'",
-        "pattern_include": "'.*(Country).*'",
-        "pattern_exclude": "'.*(Chd).*'",
-        "dtype_exclude": "None",
-        "group": "False",
-        "use_global": "True"
-    },
-
-    "Prps_categorical_OneHotEncoder": {
-        "columns_type": "'numeric'",
-        "dtype_include": "'category'",
-        "pattern_include": "'.*(Prps).*'",
-        "pattern_exclude": "'.*(Chd).*'",
-        "dtype_exclude": "None",
-        "group": "False",
-        "use_global": "True"
-    },
-
-    "Relationship_categorical_OneHotEncoder": {
-        "columns_type": "'numeric'",
-        "dtype_include": "'category'",
-        "pattern_include": "'.*(Relationship).*'",
-        "pattern_exclude": "'.*(Chd).*'",
         "dtype_exclude": "None",
         "group": "False",
         "use_global": "True"
