--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "relativedelta",
         "Resi",
         "Resiial",
+        "SCHENGEN",
         "SHAP",
         "skipna",
         "sqlalchemy",
@@ -96,6 +97,7 @@
         "thresholding",
         "Tikhonov",
         "truncnorm",
+        "Turkiye",
         "typehints",
         "unedu",
         "uvicorn",
