--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "copybutton",
         "corrcoef",
         "Countryof",
+        "cpuonly",
         "Csignature",
         "Curr",
         "databank",
@@ -35,6 +36,7 @@
         "dtreeviz",
         "dtype",
         "dtypes",
+        "dvclive",
         "fars",
         "fastapi",
         "fbeta",
@@ -43,9 +45,12 @@
         "flaml",
         "FLAMLD",
         "Frobenius",
+        "fsspec",
+        "funcy",
         "gilan",
         "githubpages",
         "gunicorn",
+        "httpx",
         "hyperparams",
         "iloc",
         "importances",
@@ -60,8 +65,11 @@
         "Lttr",
         "lxml",
         "Marr",
+        "micromamba",
+        "miniforge",
         "mlflow",
         "MLMODELS",
+        "mlruns",
         "nbonlycode",
         "Nums",
         "nunique",
@@ -77,14 +85,17 @@
         "proba",
         "Prps",
         "Psprt",
+        "pyarrow",
         "pydantic",
         "pyonlycode",
         "pypdf",
+        "pytest",
         "relativedelta",
         "Resi",
         "Resiial",
         "SCHENGEN",
         "SHAP",
+        "shecan",
         "skipna",
         "sqlalchemy",
         "Streetname",
